force-app/main/default/objects/Project_Org_Credential__c/Project_Org_Credential__c.object-meta.xml
<CustomObject>
    <label>Project Org Credential</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Org Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>