force-app/main/default/objects/Project_Org_Credential__c/fields/Org_Login_Password__c.field-meta.xml
<CustomField>
    <fullName>Org_Login_Password__c</fullName>
    <label>Org Login Password</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>