force-app/main/default/objects/Project_Org_Credential__c/fields/Org_Login_Username__c.field-meta.xml
<CustomField>
    <fullName>Org_Login_Username__c</fullName>
    <label>Org Login Username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>