force-app/main/default/objects/Project_Org_Credential__c/fields/Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Owner User</label>
    <referenceTo>Portal_User__c</referenceTo>
    <relationshipLabel>Project Org Credentials</relationshipLabel>
    <relationshipName>ProjectOrgCredentials</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>