force-app/main/default/objects/Project_Org_Credential__c/fields/Security_Token__c.field-meta.xml
<CustomField>
    <fullName>Security_Token__c</fullName>
    <label>Security Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>